--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta name="author" content="Seika Education Consultancy" />
   <title>Seika Education Consultancy</title>
 
-  <link rel="preload" as="image" href="/Seika-education/banner-2.webp">
-  <link rel="preload" as="image" href="/Seika-education/banner-5.webp">
-  <link rel="preload" as="image" href="/Seika-education/banner-1.webp">
+  <link rel="preload" as="image" href="/Seika-education/banner-2.png">
+  <link rel="preload" as="image" href="/Seika-education/banner-5.png">
+  <link rel="preload" as="image" href="/Seika-education/banner-1.png">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
