--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="/Seika-education/Logo-Seika.webp" alt="Seika Education Consultancy Logo" />
+      <img src="/Seika-education/Logo-Seika.jpeg" alt="Seika Education Consultancy Logo" />
     </div>
 
     <div class="menu-toggle" aria-label="Toggle navigation" aria-expanded="false">
