--- a/index.html
+++ b/index.html
@@ -402,10 +402,10 @@
 
     <nav>
       <ul id="nav-menu">
-        <li><a href="#home" data-key="navHome">Home</a></li>
-        <li><a href="#services" data-key="navServices">Services</a></li>
+        <li><a href="/Seika-education/index.html" data-key="navHome">Home</a></li>
+        <li><a href="/Seika-education/index.html" data-key="navServices">Services</a></li>
         <li><a href="/Seika-education/about.html" data-key="navAbout">About</a></li>
-        <li><a href="#contact" data-key="navContact">Contact</a></li>
+        <li><a href="/Seika-education/index.html"data-key="navContact">Contact</a></li>
       </ul>
     </nav>
 
@@ -423,7 +423,7 @@
           <img src="/Seika-education/banner-2.webp" alt="Seika Education Consultancy Reception Area" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
         </div>
         <div class="swiper-slide">
-          <img src="/Seika-education/banner-2.webp" alt="Study & Work in Japan Banner" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
+          <img src="/Seika-education/banner-5.webp" alt="Study & Work in Japan Banner" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
         </div>
         <div class="swiper-slide">
           <img src="/Seika-education/banner-1.webp" alt="Seika Education Consultancy Classroom" onerror="this.src='https://via.placeholder.com/600x400?text=Image+Load+Error';" />
