--- a/about.html
+++ b/about.html
@@ -514,7 +514,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="Logo-Seika.jpeg" alt="Seika Education Consultancy Logo" srcset="Logo-Seika.jpeg 1x, Logo-Seika-2x.jpeg 2x" />
+      <img src="Logo-Seika.webp" alt="Seika Education Consultancy Logo" srcset="Logo-Seika.webp 1x, Logo-Seika-2x.webp 2x" />
     </div>
 
     <div class="menu-toggle" aria-label="Toggle navigation" aria-expanded="false">
