--- a/index.html
+++ b/index.html
@@ -112,7 +112,32 @@
       text-decoration: underline;
       background-color: rgba(255, 255, 255, 0.2);
     }
+/* デスクトップではモバイルメニュー内のロゴを非表示 */
+.mobile-menu-logo-container {
+  display: none;
+}
 
+/* --- Media Queries for Mobile Responsiveness --- */
+@media (max-width: 768px) {
+  /* ... 既存のメディアクエリのCSSはそのまま ... */
+
+  /* モバイルメニュー内のロゴをモバイルで表示 */
+  .mobile-menu-logo-container {
+    display: block; /* li要素を表示 */
+    text-align: center; /* ロゴを中央寄せ */
+    padding: 10px 0 20px; /* 上下のパディングで間隔を調整 */
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1); /* 下線で区切り */
+    margin-bottom: 20px; /* 下のメニュー項目との間隔 */
+  }
+
+  .mobile-menu-logo-container .mobile-menu-logo {
+    height: 80px; /* メニュー内のロゴの高さ */
+    width: auto;
+    max-width: 90%; /* はみ出さないように最大幅を設定 */
+  }
+
+  /* ... 既存のメディアクエリのCSSはそのまま ... */
+}
     .menu-toggle {
       display: none; /* Hidden by default on desktop */
       flex-direction: column;
@@ -402,10 +427,13 @@
 
     <nav>
       <ul id="nav-menu">
-        <li><a href="/Seika-education/index.html" data-key="navHome">Home</a></li>
-        <li><a href="/Seika-education/index.html" data-key="navServices">Services</a></li>
+        <li class="mobile-menu-logo-container">
+          <img src="/Seika-education/Logo-Seika.webp" alt="Seika Education Consultancy Logo" class="mobile-menu-logo">
+        </li>
+        <li><a href="#home" data-key="navHome">Home</a></li>
+        <li><a href="#services" data-key="navServices">Services</a></li>
         <li><a href="/Seika-education/about.html" data-key="navAbout">About</a></li>
-        <li><a href="/Seika-education/index.html"data-key="navContact">Contact</a></li>
+        <li><a href="#contact" data-key="navContact">Contact</a></li>
       </ul>
     </nav>
 
